--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.14",
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.8",
+    "cloudinary-react": "^1.8.1",
+    "firebase": "^10.10.0",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
