--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.59",
