iniciando funcionalidad de cart e inicio de sesión

--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.14",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.8",
     "cloudinary-react": "^1.8.1",
     "firebase": "^10.10.0",
     "formik": "^2.4.5",
+    "install": "^0.13.0",
+    "npm": "^10.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
